@@ -172,38 +172,6 @@ public class LogTest extends TestCase {
         }
     }
 
-    public void testUpdateLabel() throws CruiseControlException, IOException, JDOMException {
-        SAXBuilder builder = new SAXBuilder("org.apache.xerces.parsers.SAXParser");
-        XMLOutputter outputter = new XMLOutputter(Format.getPrettyFormat());
-        Log log = new Log();
-        log.setProjectName("testLabelUpdate");
-        log.setDir(LOG_DIR);
-        
-        // Add a minimal buildLog
-        log.addContent(getBuildLogInfo());
-        Element build = new Element("build");
-        log.addContent(build);
-        log.addContent(new Element("modifications"));
-        build.setText("Some text");
-        
-        String expectedLabel = "NEW_LABEL";
-        log.updateLabel(expectedLabel);
-        log.validate();
-        
-        Date now = new Date();
-        // Write and read the file
-        log.writeLogFile(now);
-
-        String expectFilename = "log" + DateUtil.getFormattedTime(now) + "L" + expectedLabel + ".xml";
-        File logFile = new File(LOG_DIR, expectFilename);
-        assertTrue(logFile.isFile());
-        filesToDelete.add(logFile);
- 
-        Element actualContent = builder.build(logFile).getRootElement();
-        String actual = outputter.outputString(actualContent);
-        assertTrue(actual.indexOf("value=\"" + expectedLabel + "\"") > -1);
-    }
-
     public void testManipulateLog() throws Exception {
         String testProjectName = "testBackupLog";
 
